fix: add scrollbar-gutter: stable

--- a/packages/themes/src/scrollbar.css
+++ b/packages/themes/src/scrollbar.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  scrollbar-gutter: stable;
   scrollbar-color: var(--scrollbar-color) var(--scrollbar-track-color);
   scrollbar-width: thin;
 }
